tests/errors/semantic/non_blocking/PRIMITIVE_IMMUTABLE_RESTRICTION_IS_integer.py
# pylint: disable=missing-function-docstring, missing-module-docstring
@types('int', 'int')
def compare_is_int_int(a, b):
    return a is b
